--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -54,7 +54,7 @@
   right: 0;
   transform: translateY(0px);
   transition: all 0.2s ease-in-out;
-  background-color: #7ac7ce;
+  background-color: #00003d;
   height: auto;
 }
 
