--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,6 @@
 $lightPrimary: #f9f9f9;
 $darkPrimary: #12182b;
-$midPrimary: #1fb3cb;
+$midPrimary: #c7b7f7;
 $secondary: #ea0fb6;
 $secondaryDark: #a1017c;
 
