--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -141,15 +141,27 @@
 
 /* card */
 
-.project-card {
-  min-height: 500px;
+.project-card:hover > .project-image-wrapper {
+  transform: translateY(0%);
+  transition: all 1s;
+  display: block;
+  opacity: 100%;
 }
+
 .project-image-wrapper {
   position: absolute !important;
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 30%;
+  height: 40%;
+  opacity: 0;
+  transform: translateY(100%);
+  // display: none;
+  transition: all 1s;
+
+  // &:hover {
+  //   transform: translateY(0%);
+  // }
 
   @media (min-width: 760px) {
     width: 60%;
@@ -159,7 +171,7 @@
 .project-image {
   position: initial !important;
   height: 100%;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .bird {
