--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -1,5 +1,3 @@
-@import "./colors.scss";
-
 .notSticky {
   transform: translateY(-79.9px);
   position: fixed;
@@ -11,18 +9,6 @@
 
 .arrow {
   bottom: 20%;
-}
-
-.wave {
-  fill: $darkPrimary;
-  opacity: 100;
-  top: -3rem;
-  width: 120%;
-}
-
-.sm-active {
-  background-color: $midPrimary;
-  width: 100%;
 }
 
 .max-width {
@@ -58,14 +44,10 @@
   height: 1.25rem;
   width: 1.25rem;
   transition: all 0.1s ease-in-out;
-
-  &:hover {
-    fill: $lightPrimary;
-  }
 }
 
 .social-icon-footer {
-  fill: $darkPrimary;
+  fill: white;
   height: 20px;
   width: 20px;
 }
@@ -89,7 +71,7 @@
 }
 
 .mdc-button__label {
-  color: $darkPrimary;
+  color: black;
   font-size: 1rem;
 }
 
