--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,5 +1,3 @@
-@import "./colors.scss";
-
 .nav-list-item {
   padding: 1rem;
   width: 100%;
@@ -10,7 +8,6 @@
 
   &:focus,
   &:active {
-    color: $lightPrimary;
   }
 }
 
@@ -32,7 +29,7 @@
     height: 2px;
     width: 0%;
     left: 12%;
-    background-color: $lightPrimary;
+    // background-color: $lightPrimary;
     -webkit-transition: 0.5s ease all 0.3s;
     transition: 0.5s ease all 0s;
     // border-radius: 5px;
@@ -40,7 +37,7 @@
 }
 .hover-textLight {
   &:hover {
-    color: $lightPrimary;
+    // color: $lightPrimary;
   }
 }
 
@@ -86,7 +83,7 @@
   border-radius: 1px;
   height: 3px;
   width: 31px;
-  background: $darkPrimary;
+  // background: $darkPrimary;
   position: absolute;
   display: block;
   content: "";
